--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,11 @@
             <artifactId>grpc-stub</artifactId>
             <version>1.36.3</version>
         </dependency>
+        <dependency>
+            <groupId>ds.adeesha.naming</groupId>
+            <artifactId>client</artifactId>
+            <version>2.0</version>
+        </dependency>
     </dependencies>
 
 </project>
